[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "async_uptime_monitor"
version = "0.1.0"
description = "An asynchronous uptime and latency system designed to monitor API endpoints"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
authors = [
    {name = "HysingerDev", email = "HysingerDev@gmail.com"}
]
requires-python = ">=3.8"

keywords = [
    "API",
    "async",
    "uptime",
    "monitoring",
    "python",
    "latency",
    "alerts",
    "endpoints"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Languages :: Pythonn :: 3.10"
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Internet :: Monitoring",
    "Topic :: System :: Networking :: Monitoring",
    "Intended Audience :: Developers"
]

dependencies = [
    "pydantic>=2.0",
    "pydantic[email]",
    "aiohttp>=3.8",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.28",
    "aiosqlite>=0.19",
    "mysql-connector-python>=8.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio"
]

[project.urls]
Homepage = ""
Documentation = ""
Source = ""
Issues = ""
