[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "async_uptime_monitor"
version = "0.1.0"
description = "An asynchronous uptime and latency system designed to monitor API endpoints"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
authors = [
    {name = "HysingerDev", email = "HysingerDev@gmail.com"}
]
requires-python = ">=3.8"

keywords = [
    "API",
    "async",
    "uptime",
    "monitoring",
    "python",
    "latency",
    "alerts",
    "endpoints"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Languages :: Pythonn :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Internet :: Monitoring",
    "Topic :: System :: Networking :: Monitoring",
    "Intended Audience :: Developers"
]

dependencies = [
    "aiohttp==3.12.9",
    "aiosmtplib==4.0.1",
    "aiohappyeyeballs==2.6.1",
    "aiosignal==1.3.2",
    "attrs==25.3.0",
    "dnspython==2.7.0",
    "email-validator==2.2.0",
    "frozenlist==1.6.2",
    "idna==3.10",
    "multidict==6.4.4",
    "Packaging==25.0",
    "propcache==0.3.1",
    "pydantic==2.11.5",
    "SQLalchemy==2.0.41",
    "tenacity==9.1.2",
    "typing-inspection==0.4.1",
    "yarl==1.20.0",
    "asyncpg>=0.28",
    "aiosqlite>=0.19",
    "mysql-connector-python>=8.0"
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.0",
    "pytest-asyncio==1.0.0",
    "iniconfig==2.1.0",
    "pluggy==1.6.0",
    "Pygments==2.19.1"
]

[project.urls]
Homepage = ""
Documentation = ""
Source = ""
Issues = ""
